// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders price rank 1`] = `
<div
  class="rc-slider rc-slider-with-marks sc-bdVaJa dvPGHo"
>
  <div
    class="rc-slider-rail"
  />
  <div
    class="rc-slider-track rc-slider-track-1"
    style="left: 0%; width: 100%;"
  />
  <div
    class="rc-slider-step"
  >
    <span
      class="rc-slider-dot rc-slider-dot-active"
      style="left: 0%;"
    />
    <span
      class="rc-slider-dot rc-slider-dot-active"
      style="left: 33.33333333333333%;"
    />
    <span
      class="rc-slider-dot rc-slider-dot-active"
      style="left: 66.66666666666666%;"
    />
    <span
      class="rc-slider-dot rc-slider-dot-active"
      style="left: 100%;"
    />
  </div>
  <div
    role="slider"
    tabindex="0"
    aria-valuemin="0"
    aria-valuemax="3"
    aria-valuenow="0"
    aria-disabled="false"
    class="rc-slider-handle rc-slider-handle-1"
    style="left: 0%;"
  />
  <div
    role="slider"
    tabindex="0"
    aria-valuemin="0"
    aria-valuemax="3"
    aria-valuenow="3"
    aria-disabled="false"
    class="rc-slider-handle rc-slider-handle-2"
    style="left: 100%;"
  />
  <div
    class="rc-slider-mark"
  >
    <span
      class="rc-slider-mark-text rc-slider-mark-text-active"
      style="width: 30.000000000000004%; margin-left: -15.000000000000002%; left: 0%;"
    >
      $
    </span>
    <span
      class="rc-slider-mark-text rc-slider-mark-text-active"
      style="width: 30.000000000000004%; margin-left: -15.000000000000002%; left: 33.33333333333333%;"
    >
      $$
    </span>
    <span
      class="rc-slider-mark-text rc-slider-mark-text-active"
      style="width: 30.000000000000004%; margin-left: -15.000000000000002%; left: 66.66666666666666%;"
    >
      $$$
    </span>
    <span
      class="rc-slider-mark-text rc-slider-mark-text-active"
      style="width: 30.000000000000004%; margin-left: -15.000000000000002%; left: 100%;"
    >
      $$$$
    </span>
  </div>
</div>
`;

exports[`renders price rank 2`] = `
<div
  class="rc-slider rc-slider-with-marks sc-bdVaJa dvPGHo"
>
  <div
    class="rc-slider-rail"
  />
  <div
    class="rc-slider-track rc-slider-track-1"
    style="left: 66.66666666666666%; width: 33.33333333333334%;"
  />
  <div
    class="rc-slider-step"
  >
    <span
      class="rc-slider-dot"
      style="left: 0%;"
    />
    <span
      class="rc-slider-dot"
      style="left: 33.33333333333333%;"
    />
    <span
      class="rc-slider-dot rc-slider-dot-active"
      style="left: 66.66666666666666%;"
    />
    <span
      class="rc-slider-dot rc-slider-dot-active"
      style="left: 100%;"
    />
  </div>
  <div
    role="slider"
    tabindex="0"
    aria-valuemin="0"
    aria-valuemax="3"
    aria-valuenow="2"
    aria-disabled="false"
    class="rc-slider-handle rc-slider-handle-1"
    style="left: 66.66666666666666%;"
  />
  <div
    role="slider"
    tabindex="0"
    aria-valuemin="0"
    aria-valuemax="3"
    aria-valuenow="3"
    aria-disabled="false"
    class="rc-slider-handle rc-slider-handle-2"
    style="left: 100%;"
  />
  <div
    class="rc-slider-mark"
  >
    <span
      class="rc-slider-mark-text"
      style="width: 30.000000000000004%; margin-left: -15.000000000000002%; left: 0%;"
    >
      €
    </span>
    <span
      class="rc-slider-mark-text"
      style="width: 30.000000000000004%; margin-left: -15.000000000000002%; left: 33.33333333333333%;"
    >
      €€
    </span>
    <span
      class="rc-slider-mark-text rc-slider-mark-text-active"
      style="width: 30.000000000000004%; margin-left: -15.000000000000002%; left: 66.66666666666666%;"
    >
      €€€
    </span>
    <span
      class="rc-slider-mark-text rc-slider-mark-text-active"
      style="width: 30.000000000000004%; margin-left: -15.000000000000002%; left: 100%;"
    >
      €€€€
    </span>
  </div>
</div>
`;
